--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "categories": [
     "Themes"
   ],
-  "publisher": "lucwx",
+  "publisher": "ssilvalucas2004",
   "keywords": [
     "indie",
     "dark",
