--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "anime",
     "shoegaze"
   ],
-  "icon": "icon.png",
+  "icon": "icon.jpg",
   "repository": {
     "type": "git",
     "url": "https://github.com/lucwx/indie-dev"
